test/files/continuations-neg/function2.check
function2.scala:11: error: type mismatch;
 found   : () => Int
<<<<<<< HEAD
 required: () => Int @util.continuations.package.cps[Int]
=======
 required: () => Int @util.continuations.cps[Int]
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
    val g: () => Int @cps[Int] = f
                                 ^
one error found
